# fastapi_bulletin_board

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.eng.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: server.py
app/api/: base.py
app/api/v1/: advertisement.py  base.py  login.py  user.py
app/celery/: __init__.py  tasks.py
app/config/: settings.py
app/db/: redis.py  session.py
app/generics/: exceptions.py  permissions.py
app/middleware/: authentication.py  permissions.py  view_counter.py
app/models/: advertisement.py  base.py  base_class.py  user.py
app/permissions/: base.py
app/repositories/: advertisement.py  login.py  user.py
app/schemas/: advertisement.py  login.py  user.py
app/services/: advertisement.py  login.py  user.py
app/tests/: base.py  conftest.py  utils.py
app/tests/advertisement/: mock_advertisement.py  test_advertisement.py
app/tests/authorization/: test_auth.py
app/tests/user/: mock_user.py  test_user.py
celery_app/: __init__.py  tasks.py
migrations/: env.py
migrations/versions/: 0d1c6d5abb80_add_ads_related_tables.py  68958b424fe7_add_view_in_advertisement.py  ae104320c956_initial_user_tables.py
